--- a/styles.css
+++ b/styles.css
@@ -106,10 +106,10 @@ ul#format_course_menu_list li.ui-menu-divider {
     text-align: center;
     width:  100%;
 
-    text-shadow:1px 1px 2px rgba(64,64,64,1);
+    /*text-shadow:1px 1px 2px rgba(64,64,64,1);*/
     font-weight:normal;
-    color:#BDBDBD;
-    letter-spacing:10pt;
+    color:#000;
+    letter-spacing:5pt;
     text-align:center;
     font-family:arial black, sans-serif;
 }
@@ -245,3 +245,13 @@ ul.course_menu_target_row  li a {
 .course-content ul.topics li.section .right {width:40px;text-align:center;padding: 6px 0;}
 .course-content ul.topics li.section .right img.icon { padding: 0 0 4px 0;}
 .course-content ul.topics li.section .left .section-handle img.icon { padding:0; vertical-align: baseline; }
+
+.course_menu_cell{
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    border-radius: 10px;
+}
+
+#id_cmf_header{
+    height: 250px;
+}
